# rotors_simulator

./: README.md
aerial_ego_simulation/: CMakeLists.txt  package.xml
aerial_ego_simulation/config/: M600.yaml  lee_controller_yigle.yaml  position_controller_yigle.yaml  roll_pitch_yawrate_thrust_controller_yigle.yaml  yigle.yaml  yigle_arm_controller.yaml
aerial_ego_simulation/launch/: yigle_hovering.launch  yigle_hovering_yawrate.launch
aerial_ego_simulation/meshes/head/: camera.stl
aerial_ego_simulation/src/: bridge_yigle_rotorS.cpp
aerial_ego_simulation/urdf/: arm_base.xacro  head_base.xacro  yigle.xacro  yigle_base.xacro
aerial_ego_simulation/worlds/: empty.world  experiment.world
rotors_control/: CMakeLists.txt  package.xml
rotors_control/include/rotors_control/: attitude_thrust_controller.h  common.h  lee_position_controller.h  parameters.h  parameters_ros.h  position_controller.h  position_controller_RPYT.h  roll_pitch_yawrate_thrust_controller.h
rotors_control/src/: bridge_yigle_rotorS.cpp
rotors_control/src/nodes/: attitude_thrust_controller_node.cpp  attitude_thrust_controller_node.h  lee_position_controller_node.cpp  lee_position_controller_node.h  position_controller_node.cpp  position_controller_node.h  position_controller_node_RPYT.cpp  position_controller_node_RPYT.h  roll_pitch_yawrate_thrust_controller_node.cpp  roll_pitch_yawrate_thrust_controller_node.h
rotors_description/: package.xml
rotors_description/meshes/head/: DJI_connect.stl
rotors_description/urdf/: arm_base.xacro  arm_base_fakelink.xacro  arm_test_nofakelink copy.xacro  arm_test_nofakelink.xacro  box.xacro  component_snippets.xacro  head_base.xacro  mav_generic_odometry_sensor.gazebo  multirotor_base.xacro  neck_head_test copy.xacro  neck_head_test.xacro  yigle.xacro  yigle_base.xacro
rotors_gazebo/: CMakeLists.txt  arm_rqt.perspective  package.xml  test_params.yaml  yigle_arm_controller.yaml
rotors_gazebo/launch/: M600PRO_hovering.launch  arm_gazebo.launch  neck_test.launch  neck_test_2.launch  spawn_mav.launch  yigle_hovering.launch  yigle_hovering_with_saved_status.launch  yigle_with_simulated_joy.launch
rotors_gazebo/resource/: lee_controller_M600.yaml  roll_pitch_yawrate_thrust_controller_yigle.yaml  yigle.yaml
rotors_gazebo/src/: hovering_example.cpp  hovering_test.cpp  hovering_test_yawrate.cpp  waypoint_publisher.cpp  waypoint_publisher_file.cpp
rotors_gazebo/worlds/: basic.world  experiment.world
rotors_gazebo_plugins/: CMakeLists.txt  package.xml
rotors_gazebo_plugins/include/rotors_gazebo_plugins/: common.h  gazebo_arm_actuator_interface.h  gazebo_arm_actuator_interface_nofakelink.h  gazebo_multirotor_base_plugin.h  gazebo_ros_interface_plugin.h
rotors_gazebo_plugins/msgs/: ConnectRosToGazeboTopic.proto
rotors_gazebo_plugins/src/: gazebo_arm_actuator_interface.cpp  gazebo_arm_actuator_interface_nofakelink.cpp  gazebo_controller_interface.cpp  gazebo_motor_model.cpp  gazebo_multirotor_base_plugin.cpp  gazebo_ros_interface_plugin.cpp
rotors_joy_interface/: package.xml
rotors_joy_interface/src/: joy.cpp
